# pdf-rag

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: cli.py  config.py  embeddings.py  llm.py  pdf_loader.py  rag_pipeline.py  vector_store.py  web_app.py
