[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-rag"
version = "0.1.0"
description = "Offline PDF RAG pipeline with CLI and web interface"
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.4.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "PyMuPDF>=1.24.0",
    "langchain-text-splitters>=0.2.0",
    "streamlit>=1.38.0",
    "click>=8.1.0",
    "python-docx>=1.1.0",
]

[project.scripts]
pdf-rag = "src.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
